Agrego soluciones de la practica 5 de PyE

--- a/3 Ano/Probabilidad y Estadistica/Distribuciones.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Distribuciones.lyx
@@ -1274,7 +1274,7 @@ P\left(X\leq x\right)>\frac{1}{2}\iff\sum_{i=1}^{x}pq^{i-1}>\frac{1}{2}\iff p\fr
 
 \begin_inset Formula 
 \[
-\iff1-q^{x}>\frac{1}{2}\iff\frac{1}{2}>q^{x}\iff\log_{\frac{2598336}{2598960}}\left(\frac{1}{2}\right)>?x
+\iff1-q^{x}>\frac{1}{2}\iff\frac{1}{2}>q^{x}\iff\log_{\frac{2598336}{2598960}}\left(\frac{1}{2}\right)\leq x
 \]
 
 \end_inset
