--- a/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 5.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 5.lyx
@@ -615,19 +615,61 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $\intop_{1}^{4}kdx=\left.kx\right|_{1}^{4}=4k-k=3k=1\iff k=\frac{1}{3}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $f\left(x\right)=\begin{cases}
+\frac{1}{3} & 1\leq x\leq4\\
+0 & \text{otro caso}
+\end{cases}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $F\left(x\right)=\begin{cases}
+0 & x<1\\
+\left.\frac{1}{3}y\right|_{1}^{x}=\frac{1}{3}x-\frac{1}{3}=\frac{x-1}{3} & 1\leq x\leq4\\
+1 & x>4
+\end{cases}$
+\end_inset
+
+
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+\begin_inset Formula $P\left(X>2\right)=1-P\left(X\leq2\right)=F\left(2\right)=\frac{2-1}{3}=\frac{1}{3}$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $P\left(2<X<3\right)=F\left(3\right)-F\left(2\right)=\frac{3-1}{3}-\frac{1}{3}=\frac{1}{3}$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
-\end_layout
+\begin_inset Formula $P\left(X<\frac{3}{2}\right)=F\left(\frac{3}{2}\right)=\frac{\frac{1}{2}}{3}=\frac{1}{6}$
+\end_inset
 
-\begin_layout Enumerate
-COMPLETAR.
+.
 \end_layout
 
 \end_deeper
@@ -771,17 +813,59 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $P\left(X\leq E\left(X\right)\right)=P\left(X\leq100\right)=F\left(100\right)=1-e^{-1}\approx0,6321$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $M\left(X\right)=\frac{\ln\left(2\right)}{1/100}\approx69,3147<100=E\left(X\right)$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset space ~
+\end_inset
+
+
 \end_layout
 
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $Y$
+\end_inset
+
+: 
+\begin_inset Quotes fld
+\end_inset
+
+Cantidad de componentes que fallan antes de 200 horas de un total de tres
+\begin_inset Quotes frd
+\end_inset
+
+.
+ 
+\begin_inset Formula $Y\sim Bi\left(3;P\left(X<200\right)\right)\approx Bi\left(3;0,865\right)$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $1-P\left(Y\geq2\right)=$
+\end_inset
+
+ COMPLETAR.
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\end_deeper
 \end_deeper
 \begin_layout Enumerate-Resume
 El número de accidentes en una fábrica se puede representar por un proceso
@@ -809,10 +893,6 @@ COMPLETAR.
 
 \begin_layout Enumerate
 COMPLETAR.
-\begin_inset Newpage pagebreak
-\end_inset
-
-
 \end_layout
 
 \end_deeper
@@ -852,6 +932,10 @@ Calcule la probabilidad de que transcurran más de ocho minutos hasta la
 
 \begin_layout Enumerate
 Calcule el tiempo promedio que transcurre hasta la quinta venta.
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \begin_layout Paragraph
@@ -958,10 +1042,6 @@ Tiempo en minutos entre dos ventas sucesivas
 \end_inset
 
 .
-\begin_inset Newpage pagebreak
-\end_inset
-
-
 \end_layout
 
 \begin_layout Enumerate
@@ -1041,6 +1121,10 @@ Tiempo en minutos hasta la quinta venta
 \end_inset
 
 .
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \end_deeper
@@ -1100,14 +1184,202 @@ El tiempo de duración de cierta pila es una variable aleatoria
 Soluciones
 \end_layout
 
-\begin_layout Enumerate
-COMPLETAR.
+\begin_layout Standard
+\align center
+\begin_inset Preview
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{tikzpicture}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{axis}[
+\end_layout
+
+\begin_layout Plain Layout
+
+  no markers, domain=350:650, samples=150,
+\end_layout
+
+\begin_layout Plain Layout
+
+  axis lines*=left,
+\end_layout
+
+\begin_layout Plain Layout
+
+  every axis y label/.style={at=(current axis.above origin),anchor=south},
+\end_layout
+
+\begin_layout Plain Layout
+
+  every axis x label/.style={at=(current axis.right of origin),anchor=west},
+\end_layout
+
+\begin_layout Plain Layout
+
+  height=5cm, width=12cm,
+\end_layout
+
+\begin_layout Plain Layout
+
+  ytick=
+\backslash
+empty,
+\end_layout
+
+\begin_layout Plain Layout
+
+  enlargelimits=false, clip=false, axis on top,
+\end_layout
+
+\begin_layout Plain Layout
+
+  grid = major
+\end_layout
+
+\begin_layout Plain Layout
+
+  ]
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+addplot [fill=cyan!20, draw=none, domain=580:650] {gauss(500,50)} 
+\backslash
+closedcycle;
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+addplot [fill=cyan!20, draw=none, domain=350:450] {gauss(500,50)} 
+\backslash
+closedcycle;
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+addplot [very thick,cyan!50!black] {gauss(500,50)} node[pos=0.55,above left]
+ {$X$};
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{axis}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset space ~
+\end_inset
+
+
 \end_layout
 
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $P\left(X\geq580\right)=1-P\left(X<580\right)$
+\end_inset
+
+.
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $Z=\frac{X-500}{50}$
+\end_inset
+
+.
+ 
+\begin_inset Formula $X<580\iff Z=\frac{X-500}{50}<\frac{580-500}{50}=\frac{8}{5}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\text{\ensuremath{P\left(X\geq580\right)=1-P\left(Z<\frac{8}{5}\right)\approx1-0,9452=0,0548}}$
+\end_inset
+
+.
+\end_layout
+
+\end_deeper
+\end_deeper
+\begin_layout Enumerate
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $P\left(X<450\right)$
+\end_inset
+
+.
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $X<450\iff Z=\frac{X-500}{50}<\frac{450-500}{50}=-1$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $P\left(X<450\right)=P\left(Z<-1\right)\approx0,15866$
+\end_inset
+
+.
+\end_layout
+
+\end_deeper
+\end_deeper
 \end_deeper
 \begin_layout Enumerate-Resume
 Los alambres que se utilizan en cierta computadora deben tener una resistencia
@@ -1346,10 +1618,6 @@ end{tikzpicture}
 
 \end_layout
 
-\end_inset
-
-
-\begin_inset Newpage pagebreak
 \end_inset
 
 
@@ -1638,6 +1906,10 @@ El tiempo de duración de una batería tiene una distribución normal con media
 \end_inset
 
 .
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -1646,13 +1918,171 @@ Solución
 \end_layout
 
 \begin_layout Standard
-COMPLETAR.
-\begin_inset Newpage pagebreak
+\align center
+\begin_inset Preview
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{tikzpicture}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{axis}[
+\end_layout
+
+\begin_layout Plain Layout
+
+  no markers, domain=160:400, samples=150,
+\end_layout
+
+\begin_layout Plain Layout
+
+  axis lines*=left,
+\end_layout
+
+\begin_layout Plain Layout
+
+  every axis y label/.style={at=(current axis.above origin),anchor=south},
+\end_layout
+
+\begin_layout Plain Layout
+
+  every axis x label/.style={at=(current axis.right of origin),anchor=west},
+\end_layout
+
+\begin_layout Plain Layout
+
+  height=5cm, width=12cm,
+\end_layout
+
+\begin_layout Plain Layout
+
+  ytick=
+\backslash
+empty,
+\end_layout
+
+\begin_layout Plain Layout
+
+  enlargelimits=false, clip=false, axis on top,
+\end_layout
+
+\begin_layout Plain Layout
+
+  grid = major
+\end_layout
+
+\begin_layout Plain Layout
+
+  ]
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+addplot [fill=blue!20, draw=none, domain=160:320] {gauss(280,31)} 
+\backslash
+closedcycle;
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+addplot [very thick,green!50!black] {gauss(280,20)} node[pos=0.5, above]
+ {$
+\backslash
+sigma = 20$};
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+addplot [very thick,blue!50!black] {gauss(280,31)} node[pos=0.5, above] {$
+\backslash
+sigma = 31$};
+\end_layout
+
+\begin_layout Plain Layout
+
+  
+\backslash
+addplot [very thick,red!50!black] {gauss(280,45)} node[pos=0.5, below] {$
+\backslash
+sigma = 45$};
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{axis}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{tikzpicture}
+\end_layout
+
 \end_inset
 
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $P\left(X<320\right)$
+\end_inset
+
+.
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $Z=\frac{X-280}{\sigma}$
+\end_inset
+
+.
+ 
+\begin_inset Formula $X<320\iff Z=\frac{X-280}{\sigma}<\frac{320-280}{\sigma}=\frac{40}{\sigma}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\text{\ensuremath{P\left(X<320\right)=P\left(Z<\frac{40}{\sigma}\right)=\frac{90}{100}}\ensuremath{\iff\sigma\approx31}}$
+\end_inset
+
+.
+\end_layout
+
+\end_deeper
 \end_deeper
 \begin_layout Enumerate-Resume
 La venta semanal de nafta (en toneladas) de una estación de servicio es
@@ -2482,7 +2912,8 @@ COMPLETAR.
 \end_deeper
 \begin_layout Enumerate-Resume
 En una empresa embotelladora de jugos, la cantidad de líquido por botella
- es una v.a.
+ es una v.
+ a.
  
 \begin_inset Formula $X\sim N\left(500ml,30ml\right)$
 \end_inset
@@ -2529,8 +2960,11 @@ COMPLETAR.
 \end_deeper
 \begin_layout Enumerate-Resume
 El intervalo de tiempo empleado en determinado trabajo en la construcción
- de una casa es una variable aleatoria X cuya distribución es exponencial
- con un promedio de 10 horas.
+ de una casa es una variable aleatoria 
+\begin_inset Formula $X$
+\end_inset
+
+ cuya distribución es exponencial con un promedio de 10 horas.
  El costo de ese trabajo es 
 \begin_inset Formula $C=100+40X+3X^{2}$
 \end_inset
